--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,4 +1,9 @@
-
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 40 version
+*/
 
 /* ###
 - redo the design info by choosing proper colours and fonts
@@ -7,7 +12,6 @@
       2. the font family names in css
       3. colours in css
 ###  */
-
 /*
 Design info (preliminary)
 Colours to be used in the styling of my portfolio site are:
@@ -20,44 +24,83 @@ Typography to be used in the styling of my portfolio site are:
 Primary font: Dancing Script
 secondary font: Palanquin
 */
-
-
-:root { /* gold */ /* linden green */ /* soft dark grey */ /* white */ /* off-white */ /* dark-gold */ /* light gold */ /* light linden green */ /* blue */
+:root {
+  --primary-colour: #AE9152;
+  /* gold */
+  --secondary-colour: #BFD9D7;
+  /* linden green */
+  --text-colour-dark: #353745;
+  /* soft dark grey */
+  --text-colour-light: #ffffff;
+  /* white */
+  --background-colour: #fdfcfb;
+  /* off-white */
+  --primary-colour-dark: #796539;
+  /* dark-gold */
+  --primary-colour-light: #CAAA64;
+  /* light gold */
+  --secondary-colour-light: #DFECEB;
+  /* light linden green */
+  --link-colour-active: #3b44f6;
+  /* blue */
+  --font-size-main: 16px;
+  --font-size-footer-heading: 18px;
+  --font-size-navigation__item: 20px;
+  --font-size-h1: 50px;
+  --font-size-h2: 24px;
+  --font-size-button: 16px;
+  --font-size-button-large: 18px;
+  --font-size-h1-small-screen: 22px;
 }
 
 /* //Styling concering all the pages of the website // */
-
 /* Styling the body in general */
 body {
-  background-color: #fdfcfb;
+  background-color: var(--background-colour);
   font-family: 'Palanquin', sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: var(--font-size-main);
   line-height: 1.6;
-  color: #353745;
+  color: var(--text-colour-dark);
 }
 
 /* This changes the default setting regarding width, including the padding and border in the width
 as opposed to adding it to the specified width */
 * {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* Styling the header within the body*/
 .page-header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  background-color: #BFD9D7;
+  background-color: var(--secondary-colour);
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .page-header__item {
-  flex: 0 1 200px;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 1 200px;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header .page-header__item:last-child {
-  flex-grow: 1;
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -70,9 +113,14 @@ as opposed to adding it to the specified width */
 .navigation-list li {
   display: inline-block;
   margin-left: 15px;
-  font-size: 20px;
-  flex-grow: 1;
-  flex-shrink: 1;
+  font-size: var(--font-size-navigation__item);
+  -webkit-box-flex: 1;
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-flex-shrink: 1;
+      -ms-flex-negative: 1;
+          flex-shrink: 1;
 }
 
 /* This will remove the underline from the nav link of the active page*/
@@ -89,10 +137,17 @@ as opposed to adding it to the specified width */
 
 /* Styling the footer within the body */
 .page-footer {
-  background-color: #BFD9D7;
+  background-color: var(--secondary-colour);
   clear: both;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
@@ -100,7 +155,7 @@ as opposed to adding it to the specified width */
 I did this because it due to screen reader accessibility I had to give them different headers */
 #find-me-on__header {
   font-family: 'Palanquin', sans-serif;
-  font-size: 18px;
+  font-size: var(--font-size-footer-heading);
   font-weight: 700;
 }
 
@@ -112,26 +167,26 @@ I did this because it due to screen reader accessibility I had to give them diff
 /* This styles the h1 headers in general */
 .section__header1 {
   font-family: 'Dancing Script', cursive;
-  font-size: 50px;
+  font-size: var(--font-size-h1);
   font-weight: 700;
 }
 
 /* This styles the h2 headers in general */
 .section__header2 {
   font-family: 'Palanquin', sans-serif;
-  font-size: 24px;
+  font-size: var(--font-size-h2);
   font-weight: 700;
 }
 
 /* Styling the hyperlinks */
 /* the following gives the hyperlinks all the same colour */
 a {
-  color: #AE9152;
+  color: var(--primary-colour);
 }
 
 /* the following gives a link that has been visited a different colour */
 a:visited {
-  color: #796539;
+  color: var(--primary-colour-dark);
 }
 
 /* the following removes the underline when the mouse hovers over the link
@@ -142,33 +197,24 @@ a:hover, a:focus {
 
 /* the following gives a link that has been selevted a different colour */
 a:active {
-  color: #3b44f6;
+  color: var(--link-colour-active);
 }
 
 /* Styling the buttons */
 /* The following styles the shape, colors, font, decoration of the buttons*/
-button {
+button, .button {
   border: none;
   font-family: inherit;
-  background-color: #CAAA64;
-  font-size: 16px;
+  background-color: var(--primary-colour-light);
+  font-size: var(--font-size-button);
   text-decoration: none;
-  color: #ffffff;
+  color: var(--text-colour-light);
   padding: 10px;
-  border-radius: 3px;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
-  transition: 0.3s opacity;
-}
-.button {
-  border: none;
-  font-family: inherit;
-  background-color: #CAAA64;
-  font-size: 16px;
-  text-decoration: none;
-  color: #ffffff;
-  padding: 10px;
-  border-radius: 3px;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.3s opacity;
+  -o-transition: 0.3s opacity;
   transition: 0.3s opacity;
 }
 
@@ -180,7 +226,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 .button:visited {
-  color: #ffffff;
+  color: var(--text-colour-light);
 }
 
 /* This styles the largest sections within the main sections of each page */
@@ -190,22 +236,24 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /*  // Styling concerning multiple but not all the pages of the website // */
-
 /* This styles the portraits on home and about page */
 .profile__portrait {
   float: left;
   margin-right: 40px;
   width: 250px;
   height: auto;
-  border-radius: 50%;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
   margin-bottom: 10px;
 }
-
 
 /*  // Styling concerning just one page of the website // */
 /* Styling concerning just the home page */
 .profile-section__paragraph {
-  flex: 1 1 100px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
 }
 
 #text__fullstack-web-developer {
@@ -215,7 +263,10 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 /* Styling concerning just the about page */
 .about-section__paragraph {
-  flex: 1 1 100px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
 }
 
 .about-section__table {
@@ -224,10 +275,10 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* Styling concerning just the contact page */
-
 #contact-section__image {
   float: left;
-  border-radius: 3%;
+  -webkit-border-radius: 3%;
+          border-radius: 3%;
   width: 300px;
   height: auto;
   margin-right: 30px;
@@ -235,7 +286,10 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 .contact-section__paragraph {
-  flex: 1 1 100px;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
   font-size: large;
 }
 
@@ -261,42 +315,53 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* This is the fallback option for the browsers that cannot use grid */
-.grid__item{
+.grid__item {
   display: inline-block;
   width: 33%;
 }
 
 .button__contact-me-now {
-  font-size: 18px;
+  font-size: var(--font-size-button-large);
 }
 
 /* This tells browser to use the grid, if it supports the feature */
-@supports (display: grid) {
+@supports ((display: -ms-grid) or (display: grid)) {
   .project-list {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr; /* !!! maybe change this to just 3 1frs */
+    -ms-grid-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* !!! maybe change this to just 3 1frs */
     grid-gap: 20px;
   }
 
   /* The following styles the grid items */
   .project-list__item {
-    background-color: #DFECEB;  /* maybe use #e6decb or #bfd9d7 */
+    background-color: var(--secondary-colour-light);
+    /* maybe use #e6decb or #bfd9d7 */
     padding: 20px 30px 35px;
-    border-radius: 30px;
+    -webkit-border-radius: 30px;
+            border-radius: 30px;
     width: auto;
     min-height: auto;
     margin: 0;
   }
 
   .project-list__item:last-child {
-    grid-column: 4/ 4; /* !!! maybe change this to 3 /3 */
-    grid-row: 1 / 4; /* !!! maybe change this to 1 / 3 */
+    -ms-grid-column: 4;
+    grid-column: 4/ 4;
+    /* !!! maybe change this to 3 /3 */
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 3;
+    grid-row: 1 / 4;
+    /* !!! maybe change this to 1 / 3 */
   }
 }
 
 /* The following creates responsive design in ragards to screen width */
 @media all and (min-width: 500px) and (max-width:750px) {
   .project-list {
+    -ms-grid-columns: 1fr 10px 1fr;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
   }
@@ -307,12 +372,13 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 
   .h1 {
-    font-size: 22px;
+    font-size: var(--font-size-h1-small-screen);
   }
 }
 
 @media all and (max-width: 500px) {
   .project-list {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
     grid-gap: 10px;
   }
@@ -323,67 +389,147 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 
   .h1 {
-    font-size: 22px;
+    font-size: var(--font-size-h1-small-screen);
   }
 }
-
 
 /*
 ###
 - styling for svg animation on about page, should be changed for final project as I want a different city attached to my site
 ### //
 */
+@-webkit-keyframes sun-color-change {
+  0% {
+    fill: #edc655;
+  }
+
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
+}
 @keyframes sun-color-change {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
 }
 
 .sun {
-  animation-duration: 7s;
-  animation-name: sun-color-change;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s;
+  -webkit-animation-name: sun-color-change;
+          animation-name: sun-color-change;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 /* what am I doing wrong here?? I cannot animate the clouds*/
+@-webkit-keyframes cloud-front-moving {
+  from {
+    -webkit-transform: translate(0px, 50px);
+            transform: translate(0px, 50px);
+  }
+
+  to {
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
+  }
+}
 @keyframes cloud-front-moving {
   from {
-    transform: translate(0px, 50px);
+    -webkit-transform: translate(0px, 50px);
+            transform: translate(0px, 50px);
   }
+
   to {
-    transform: translate(200px, 50px);
+    -webkit-transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
-  animation-duration: 30s;
-  animation-name: cloud-front-moving;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
+  -webkit-animation-duration: 30s;
+          animation-duration: 30s;
+  -webkit-animation-name: cloud-front-moving;
+          animation-name: cloud-front-moving;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
+
+@-webkit-keyframes cloud-back-move {
+  from {
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
+  }
+
+  to {
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
+  }
 }
 
 @keyframes cloud-back-move {
   from {
-    transform: translate(446px, 48px);
+    -webkit-transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
+
   to {
-    transform: translate(100px, 48px);
+    -webkit-transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
-  animation-duration: 30s;
-  animation-name: cloud-back-move;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
+  -webkit-animation-duration: 30s;
+          animation-duration: 30s;
+  -webkit-animation-name: cloud-back-move;
+          animation-name: cloud-back-move;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+}
+
+@-webkit-keyframes hamburg_skyline-fade-in {
+  0% {opacity: 1;}
+  50% {opacity: 0.5;}
+  100% {opacity: 0;}
+}
+
+@keyframes hamburg_skyline-fade-in {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.hamburg_skyline_svg {
+  -webkit-animation-duration: 20s;
+          animation-duration: 20s;
+  -webkit-animation-name: hamburg_skyline-fade-in;
+          animation-name: hamburg_skyline-fade-in;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
 }
