--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
       2. the font family names in css
       3. colours in css
 ###  */
+
 /*
 Design info (preliminary)
 Colours to be used in the styling of my portfolio site are:
@@ -18,24 +19,15 @@ Primary font: Dancing Script
 secondary font: Palanquin
 */
 :root {
-  --primary-colour: #AE9152;
-  /* gold */
-  --secondary-colour: #BFD9D7;
-  /* linden green */
-  --text-colour-dark: #353745;
-  /* soft dark grey */
-  --text-colour-light: #ffffff;
-  /* white */
-  --background-colour: #fdfcfb;
-  /* off-white */
-  --primary-colour-dark: #796539;
-  /* dark-gold */
-  --primary-colour-light: #CAAA64;
-  /* light gold */
-  --secondary-colour-light: #DFECEB;
-  /* light linden green */
-  --link-colour-active: #3b44f6;
-  /* blue */
+  --primary-colour: #ae9152; /* gold */
+  --secondary-colour: #bfd9d7; /* linden green */
+  --text-colour-dark: #353745; /* soft dark grey */
+  --text-colour-light: #fff; /* white */
+  --background-colour: #fdfcfb; /* off-white */
+  --primary-colour-dark: #796539;/* dark-gold */
+  --primary-colour-light: #caaa64; /* light gold */
+  --secondary-colour-light: #dfeceb; /* light linden green */
+  --link-colour-active: #3b44f6; /* blue */
   --font-size-main: 16px;
   --font-size-footer-heading: 18px;
   --font-size-navigation__item: 20px;
@@ -47,6 +39,7 @@ secondary font: Palanquin
 }
 
 /* //Styling concering all the pages of the website // */
+
 /* Styling the body in general */
 body {
   background-color: var(--background-colour);
@@ -63,7 +56,7 @@ as opposed to adding it to the specified width */
   box-sizing: border-box;
 }
 
-/* Styling the header within the body*/
+/* Styling the header within the body */
 .page-header {
   display: flex;
   background-color: var(--secondary-colour);
@@ -95,7 +88,7 @@ as opposed to adding it to the specified width */
   flex-shrink: 1;
 }
 
-/* This will remove the underline from the nav link of the active page*/
+/* This will remove the underline from the nav link of the active page */
 .navigation-list__item--active {
   text-decoration: none;
 }
@@ -133,7 +126,8 @@ I did this because it due to screen reader accessibility I had to give them diff
   margin: 25px;
 }
 
-/* Styling headers in the body*/
+/* Styling headers in the body */
+
 /* This styles the h1 headers in general */
 .section__header1 {
   font-family: 'Dancing Script', cursive;
@@ -149,6 +143,7 @@ I did this because it due to screen reader accessibility I had to give them diff
 }
 
 /* Styling the hyperlinks */
+
 /* the following gives the hyperlinks all the same colour */
 a {
   color: var(--primary-colour);
@@ -161,7 +156,8 @@ a:visited {
 
 /* the following removes the underline when the mouse hovers over the link
 or when someone accesses the link with the keyboard */
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
 }
 
@@ -171,8 +167,10 @@ a:active {
 }
 
 /* Styling the buttons */
-/* The following styles the shape, colors, font, decoration of the buttons*/
-button, .button {
+
+/* The following styles the shape, colors, font, decoration of the buttons */
+button,
+.button {
   border: none;
   font-family: inherit;
   background-color: var(--primary-colour-light);
@@ -186,7 +184,10 @@ button, .button {
 }
 
 /* The following styles the active interaction with the buttons */
-button:hover, button:focus, .button:hover, .button:focus {
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
   cursor: pointer;
   opacity: 0.7;
   text-decoration: underline;
@@ -197,12 +198,15 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* This styles the largest sections within the main sections of each page */
-.profile, .about, .contact {
+.profile,
+.about,
+.contact {
   max-width: 700px;
   margin: auto;
 }
 
 /*  // Styling concerning multiple but not all the pages of the website // */
+
 /* This styles the portraits on home and about page */
 .profile__portrait {
   float: left;
@@ -214,6 +218,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /*  // Styling concerning just one page of the website // */
+
 /* Styling concerning just the home page */
 .profile-section__paragraph {
   flex: 1 1 100px;
@@ -262,13 +267,14 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* Styling concering just the work page */
+
 /* This styles the grid layout for the work page */
 .work {
   margin: 20px;
   padding: 10px;
 }
 
-#my-work{
+#my-work {
   font-size: 72px;
 }
 
@@ -287,14 +293,12 @@ button:hover, button:focus, .button:hover, .button:focus {
   .project-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* !!! maybe change this to just 3 1frs */
     grid-gap: 20px;
   }
 
   /* The following styles the grid items */
   .project-list__item {
-    background-color: var(--secondary-colour-light);
-    /* maybe use #e6decb or #bfd9d7 */
+    background-color: var(--secondary-colour-light); /* maybe use #e6decb or #bfd9d7 */
     padding: 20px 30px 35px;
     border-radius: 30px;
     width: auto;
@@ -304,14 +308,12 @@ button:hover, button:focus, .button:hover, .button:focus {
 
   .project-list__item:last-child {
     grid-column: 4/ 4;
-    /* !!! maybe change this to 3 /3 */
     grid-row: 1 / 4;
-    /* !!! maybe change this to 1 / 3 */
   }
 }
 
 /* The following creates responsive design in regards to screen width */
-@media all and (min-width: 500px) and (max-width:750px) {
+@media all and (min-width: 500px) and (max-width: 750px) {
   .project-list {
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
@@ -343,11 +345,11 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 }
 
-/* Styling the hamburg svg on home and about*/
+/* Styling the hamburg svg on home and about */
 @keyframes hamburg_skyline-fade-in {
-  0% {opacity: 0;}
-  50% {opacity: 0.5;}
-  100% {opacity: 1;}
+  0% { opacity: 0; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
 }
 
 .hamburg_skyline_svg {
@@ -362,8 +364,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   margin-left: 5%;
 }
 
-
-/*stying the logo svg on contact*/
+/* styling the logo svg on contact */
 @keyframes network-zoom-in {
   0% {
     transform-origin: center;
@@ -380,5 +381,5 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 .network {
- animation: network-zoom-in 12s ease-in 1;
+  animation: network-zoom-in 12s ease-in 1;
 }
