--- a/css/style.production.css
+++ b/css/style.production.css
@@ -12,6 +12,7 @@
       2. the font family names in css
       3. colours in css
 ###  */
+
 /*
 Design info (preliminary)
 Colours to be used in the styling of my portfolio site are:
@@ -25,24 +26,15 @@ Primary font: Dancing Script
 secondary font: Palanquin
 */
 :root {
-  --primary-colour: #AE9152;
-  /* gold */
-  --secondary-colour: #BFD9D7;
-  /* linden green */
-  --text-colour-dark: #353745;
-  /* soft dark grey */
-  --text-colour-light: #ffffff;
-  /* white */
-  --background-colour: #fdfcfb;
-  /* off-white */
-  --primary-colour-dark: #796539;
-  /* dark-gold */
-  --primary-colour-light: #CAAA64;
-  /* light gold */
-  --secondary-colour-light: #DFECEB;
-  /* light linden green */
-  --link-colour-active: #3b44f6;
-  /* blue */
+  --primary-colour: #ae9152; /* gold */
+  --secondary-colour: #bfd9d7; /* linden green */
+  --text-colour-dark: #353745; /* soft dark grey */
+  --text-colour-light: #fff; /* white */
+  --background-colour: #fdfcfb; /* off-white */
+  --primary-colour-dark: #796539;/* dark-gold */
+  --primary-colour-light: #caaa64; /* light gold */
+  --secondary-colour-light: #dfeceb; /* light linden green */
+  --link-colour-active: #3b44f6; /* blue */
   --font-size-main: 16px;
   --font-size-footer-heading: 18px;
   --font-size-navigation__item: 20px;
@@ -54,6 +46,7 @@ secondary font: Palanquin
 }
 
 /* //Styling concering all the pages of the website // */
+
 /* Styling the body in general */
 body {
   background-color: var(--background-colour);
@@ -71,7 +64,7 @@ as opposed to adding it to the specified width */
           box-sizing: border-box;
 }
 
-/* Styling the header within the body*/
+/* Styling the header within the body */
 .page-header {
   display: -webkit-box;
   display: -webkit-flex;
@@ -123,7 +116,7 @@ as opposed to adding it to the specified width */
           flex-shrink: 1;
 }
 
-/* This will remove the underline from the nav link of the active page*/
+/* This will remove the underline from the nav link of the active page */
 .navigation-list__item--active {
   text-decoration: none;
 }
@@ -139,7 +132,6 @@ as opposed to adding it to the specified width */
   width: 180px;
   margin-left: 5%;
 }
-
 
 /* Styling the footer within the body */
 .page-footer {
@@ -169,7 +161,8 @@ I did this because it due to screen reader accessibility I had to give them diff
   margin: 25px;
 }
 
-/* Styling headers in the body*/
+/* Styling headers in the body */
+
 /* This styles the h1 headers in general */
 .section__header1 {
   font-family: 'Dancing Script', cursive;
@@ -185,6 +178,7 @@ I did this because it due to screen reader accessibility I had to give them diff
 }
 
 /* Styling the hyperlinks */
+
 /* the following gives the hyperlinks all the same colour */
 a {
   color: var(--primary-colour);
@@ -197,7 +191,8 @@ a:visited {
 
 /* the following removes the underline when the mouse hovers over the link
 or when someone accesses the link with the keyboard */
-a:hover, a:focus {
+a:hover,
+a:focus {
   text-decoration: none;
 }
 
@@ -207,8 +202,10 @@ a:active {
 }
 
 /* Styling the buttons */
-/* The following styles the shape, colors, font, decoration of the buttons*/
-button, .button {
+
+/* The following styles the shape, colors, font, decoration of the buttons */
+button,
+.button {
   border: none;
   font-family: inherit;
   background-color: var(--primary-colour-light);
@@ -225,7 +222,10 @@ button, .button {
 }
 
 /* The following styles the active interaction with the buttons */
-button:hover, button:focus, .button:hover, .button:focus {
+button:hover,
+button:focus,
+.button:hover,
+.button:focus {
   cursor: pointer;
   opacity: 0.7;
   text-decoration: underline;
@@ -236,12 +236,15 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* This styles the largest sections within the main sections of each page */
-.profile, .about, .contact {
+.profile,
+.about,
+.contact {
   max-width: 700px;
   margin: auto;
 }
 
 /*  // Styling concerning multiple but not all the pages of the website // */
+
 /* This styles the portraits on home and about page */
 .profile__portrait {
   float: left;
@@ -254,6 +257,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /*  // Styling concerning just one page of the website // */
+
 /* Styling concerning just the home page */
 .profile-section__paragraph {
   -webkit-box-flex: 1;
@@ -311,13 +315,14 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* Styling concering just the work page */
+
 /* This styles the grid layout for the work page */
 .work {
   margin: 20px;
   padding: 10px;
 }
 
-#my-work{
+#my-work {
   font-size: 72px;
 }
 
@@ -338,14 +343,12 @@ button:hover, button:focus, .button:hover, .button:focus {
     display: grid;
     -ms-grid-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* !!! maybe change this to just 3 1frs */
     grid-gap: 20px;
   }
 
   /* The following styles the grid items */
   .project-list__item {
-    background-color: var(--secondary-colour-light);
-    /* maybe use #e6decb or #bfd9d7 */
+    background-color: var(--secondary-colour-light); /* maybe use #e6decb or #bfd9d7 */
     padding: 20px 30px 35px;
     -webkit-border-radius: 30px;
             border-radius: 30px;
@@ -357,16 +360,14 @@ button:hover, button:focus, .button:hover, .button:focus {
   .project-list__item:last-child {
     -ms-grid-column: 4;
     grid-column: 4/ 4;
-    /* !!! maybe change this to 3 /3 */
     -ms-grid-row: 1;
     -ms-grid-row-span: 3;
     grid-row: 1 / 4;
-    /* !!! maybe change this to 1 / 3 */
   }
 }
 
 /* The following creates responsive design in regards to screen width */
-@media all and (min-width: 500px) and (max-width:750px) {
+@media all and (min-width: 500px) and (max-width: 750px) {
   .project-list {
     -ms-grid-columns: 1fr 10px 1fr;
     grid-template-columns: 1fr 1fr;
@@ -400,16 +401,17 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 }
 
-/* Styling the hamburg svg on home and about*/
+/* Styling the hamburg svg on home and about */
 @-webkit-keyframes hamburg_skyline-fade-in {
-  0% {opacity: 0;}
-  50% {opacity: 0.5;}
-  100% {opacity: 1;}
+  0% { opacity: 0; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
 }
+
 @keyframes hamburg_skyline-fade-in {
-  0% {opacity: 0;}
-  50% {opacity: 0.5;}
-  100% {opacity: 1;}
+  0% { opacity: 0; }
+  50% { opacity: 0.5; }
+  100% { opacity: 1; }
 }
 
 .hamburg_skyline_svg {
@@ -428,8 +430,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   margin-left: 5%;
 }
 
-
-/*stying the logo svg on contact*/
+/* styling the logo svg on contact */
 @-webkit-keyframes network-zoom-in {
   0% {
     -webkit-transform-origin: center;
@@ -450,6 +451,7 @@ button:hover, button:focus, .button:hover, .button:focus {
             transform: scale(1);
   }
 }
+
 @keyframes network-zoom-in {
   0% {
     -webkit-transform-origin: center;
@@ -472,6 +474,6 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 .network {
- -webkit-animation: network-zoom-in 12s ease-in 1;
-         animation: network-zoom-in 12s ease-in 1;
+  -webkit-animation: network-zoom-in 12s ease-in 1;
+          animation: network-zoom-in 12s ease-in 1;
 }
